# efu

./: .gitignore  README.md  filetime.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: README.md  REFERENCE.md  REMOTE.md  attribute-flags.md  json.md
samples/: sample1.efu
src/efu/: __init__.py  array_to_efu.py  cli.py  efu_record.py  efu_records.py  efu_to_array.py  efu_to_objects.py  objects_to_efu.py  root.py  root_cli.py
src/efu_csv_utils/: __init__.py
tests/: test_cli.py  test_efu_record.py  test_efu_records.py  test_efu_to_objects.py  test_httpimport_functions.py  test_httpimport_remote.py  test_objects_to_efu.py  test_parse_efu.py  test_parse_efu_objects.py  test_root.py  test_root_cli.py  test_roundtrip.py  test_write_efu.py
