[tool.poetry]
name = "efu-csv-utils"
version = "0.1.0"
description = "Custom CSV parser and serializer for Everything EFU files"
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
readme = "README.md"
packages = [{include = "efu_csv_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
efu-csv-utils = "efu_csv_utils:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
