[tool.poetry]
name = "efu"
version = "0.1.1"
description = "Custom CSV parser and serializer for Everything EFU files"
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
readme = "README.md"
packages = [{include = "efu", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
jcs = "^0.2"

[tool.poetry.group.dev.dependencies]
flake8 = {version = "^6.0", python = ">=3.8.1"}
pytest = "^8.0"
httpimport = "^1.4"

[tool.poetry.scripts]
efu = "efu:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
